--- a/src/main/webapp/src/app/app.component.html
+++ b/src/main/webapp/src/app/app.component.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 <header id="intro" style="display: block;">
   <article class="fullheight" style="height: 568px;">
     <div class="hgroup">
@@ -19,16 +20,39 @@
 <main id="wrapper">
   <div class="scene" id="welcome">
     <article class="content">
-      <div class="gallery">
-        <img src="../assets/images/intro_room.jpg" alt="Intro Gallery Room Sample Pictures">
-        <img src="../assets/images/intro_pool.jpg" alt="Intro Gallery Pool Sample Pictures">
-        <img src="../assets/images/intro_dining.jpg" alt="Intro Gallery Dining Sample Pictures">
-        <img src="../assets/images/intro_attractions.jpg" alt="Intro Gallery Attractions Sample Pictures">
-        <img class="hidesm" src="../assets/images/intro_wedding.jpg" alt="Intro Gallery Dining Sample Pictures">
-      </div>
-      <h1>Book a Room</h1>
 
-      {{title}}
+      <div class="row">
+        <div class="col-12">
+          <div class="gallery">
+            <img src="../assets/images/intro_room.jpg" alt="Intro Gallery Room Sample Pictures">
+            <img src="../assets/images/intro_pool.jpg" alt="Intro Gallery Pool Sample Pictures">
+            <img src="../assets/images/intro_dining.jpg" alt="Intro Gallery Dining Sample Pictures">
+            <img src="../assets/images/intro_attractions.jpg" alt="Intro Gallery Attractions Sample Pictures">
+            <img class="hidesm" src="../assets/images/intro_wedding.jpg" alt="Intro Gallery Dining Sample Pictures">
+          </div>
+          <h1>Book a Room</h1>
+
+          <form class="form-horizontal">
+            <div class="form-group">
+              <label for="checkin" class="col-4">Check-In:</label>
+              <div class="col-8">
+                <input id="checkin" type="date" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="checkout" class="col-4">Check-Out:</label>
+              <div class="col-8">
+                <input id="checkout" type="date" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-10 col-offset-2">
+                <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
 
     </article>
   </div><!-- welcome -->
@@ -99,8 +123,8 @@
     </article>
     <article id="greenprogram">
       <h2>Caravansary Green Program</h2>
-      <p><strong>The Caravansary Hotel - London</strong> was recently renovated, and we considered the impact on the earth
-        the entire way. From green building materials, to solar power, to energy-friendly lighting and appliances
+      <p><strong>The Caravansary Hotel - London</strong> was recently renovated, and we considered the impact on the
+        earth the entire way. From green building materials, to solar power, to energy-friendly lighting and appliances
         throughout the hotel - we’re saving energy in every socket, outlet, and switch. We’ve also initiated a recycling
         and composting program that reduces the load to local landfills, while providing valuable raw material for use
         in new products, or in the case of compost, for use in local gardens and landscapes.</p>
@@ -119,8 +143,8 @@
       <section id="rooftopcafe">
         <h2>Rooftop Café</h2>
         <img src="../assets/images/dining_rooftop.jpg" alt="Dining">
-        <p>Caravansary Rooftop Café is the destination for five star dining. Our master chefs are trained to meet special
-          dietary needs, and we offer a range of vegetarian/vegan, kosher, gluten, and dairy free selections to
+        <p>Caravansary Rooftop Café is the destination for five star dining. Our master chefs are trained to meet
+          special dietary needs, and we offer a range of vegetarian/vegan, kosher, gluten, and dairy free selections to
           accommodate our guests. Whether you’re in the mood for our award winning roast beef, fresh select salads,
           appetizing lunch entrees, or delectable desserts, we have you covered.</p>
       </section>
