--- a/src/main/webapp/src/app/app.component.css
+++ b/src/main/webapp/src/app/app.component.css
@@ -220,7 +220,7 @@ body {
 
 header .fullheight {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
-  url("images/hotel/splash_hotelphoto.jpg");
+  url("../assets/images/hotel/splash_hotelphoto.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   -webkit-background-size: cover;
