--- a/src/main/webapp/src/app/app.component.html
+++ b/src/main/webapp/src/app/app.component.html
@@ -30,19 +30,20 @@
             <img src="../assets/images/intro_attractions.jpg" alt="Intro Gallery Attractions Sample Pictures">
             <img class="hidesm" src="../assets/images/intro_wedding.jpg" alt="Intro Gallery Dining Sample Pictures">
           </div>
+
           <h1>Book a Room</h1>
 
-          <form class="form-horizontal">
+          <form class="form-horizontal" [formGroup]="roomSearch" (submit)="onSubmit(roomSearch)">
             <div class="form-group">
               <label for="checkin" class="col-4">Check-In:</label>
               <div class="col-8">
-                <input id="checkin" type="date" class="form-control">
+                <input id="checkin" type="date" class="form-control" formControlName="checkin">
               </div>
             </div>
             <div class="form-group">
               <label for="checkout" class="col-4">Check-Out:</label>
               <div class="col-8">
-                <input id="checkout" type="date" class="form-control">
+                <input id="checkout" type="date" class="form-control" formControlName="checkout">
               </div>
             </div>
             <div class="form-group">
@@ -51,6 +52,32 @@
               </div>
             </div>
           </form>
+        </div>
+      </div>
+
+      <h1>Available Rooms</h1>
+
+      <div class="row">
+        <div class="col-12">
+          <div class="table-responsive">
+            <table class="table">
+              <tbody>
+              <tr *ngFor="let room of rooms">
+                <td>
+                  <img src="../assets/images/intro_room.jpg" alt="Placeholder">
+                </td>
+                <td>
+                  <strong>Room #: {{room.roomNumber}}</strong>
+                  <br/>
+                  <strong>Price: ${{room.price}}</strong>
+                </td>
+                <td>
+                  <button type="submit" class="btn btn-primary" (click)="reserveRoom(room.id)">Reserve</button>
+                </td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
 
