--- a/src/main/webapp/src/app/app.component.html
+++ b/src/main/webapp/src/app/app.component.html
@@ -57,7 +57,7 @@
 
       <h1>Available Rooms</h1>
 
-      <div class="row">
+      <div class="row" *ngIf="rooms">
         <div class="col-12">
           <div class="table-responsive">
             <table class="table">
